@@ -309,7 +309,7 @@ extern int ntfs_resident_attr_value_resize(MFT_RECORD *m, ATTR_RECORD *a,
 extern int ntfs_attr_record_move_to(ntfs_attr_search_ctx *ctx, ntfs_inode *ni);
 extern int ntfs_attr_record_move_away(ntfs_attr_search_ctx *ctx, int extra);
 
-extern int ntfs_attr_update_mapping_pairs(ntfs_attr *na);
+extern int ntfs_attr_update_mapping_pairs(ntfs_attr *na, VCN from_vcn);
 
 extern int ntfs_attr_truncate(ntfs_attr *na, const s64 newsize);
 
