@@ -81,7 +81,11 @@ xx/xx/2005 - 1.12.2-WIP
 	- Make ntfsinfo report the MFT record flags properly, this includes
 	  the less encountered flags, and reporting the in_use flag instead of
 	  inverting it to unused.  (Yuval)
-	- mkntfs: fix segfault when volume had more than 2^31 clusters. (Szaka)
+	- mkntfs: fix segfault when volume had more than 2^31 clusters.  (Szaka)
+	- Add @from_vcn parameter to ntfs_attr_update_mapping_pairs, update all
+	  users to submit it, thus write speed to very fragmented files
+	  dramatically increased, while write speed to low fragmented files
+	  stayed at approximately same level.  (Yura)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
